Remove border for anchor wrapped images (IE issue)

--- a/src/sass/partials/_base.sass
+++ b/src/sass/partials/_base.sass
@@ -37,6 +37,9 @@ a
 	color: $blue
 	text-decoration: none
 
+	img
+		border: 0
+
 	&:hover
 		color: $blueHover
 
